--- a/product.html
+++ b/product.html
@@ -17,24 +17,11 @@
 
         </nav>
     </header>
-    <main>
-        <div class="item_card">
-            <article class="item">
-                <div class="grid_1_1">
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1164.webp" alt="Produkt 1" />
+    <main id="productContainer">
 
-                    <div class="text_wrapper">
-                        <h1 class="brand">NIKE</h1>
-                        <h3 class="item_header">Blue T20 Indian Cricket Jersey</h3>
-                        <p class="item_status">999 kr</p>
-                        <p class="item_price">1595 kr</p>
-                        <p class="stock_status">På lager: 12 stk</p>
-                        <a href="product.html" class="item_btn">Tilføj til kurv</a>
-                    </div>
-                </div>
-            </article>
-        </div>
     </main>
+
+    <script src="/js/product.js"></script>
 </body>
 
 </html>
