--- a/productlist.html
+++ b/productlist.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product list</title>
     <link rel="stylesheet" href="style.css">
+    <script src="js/productlist.js" defer></script>
 </head>
 
 <body>
@@ -18,62 +19,14 @@
         </nav>
     </header>
     <main>
-        <h2 class="product_header">PRODUCT LIST</h2>
 
+        <h2 class="product_header">PRODUCT LIST</h2>
         <div class="container">
             <div class="product-gallery">
-                <article class="product">
-                    <h3>NIKE - Blue T20 Indian Cricket Jersey</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1164.webp" alt="Produkt 1" />
-                    <p class="old_price">1595 kr</p>
-                    <p class="status">999 kr</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
-                <article class="product">
-                    <h3>PUMA - Deck Navy Blue Backpack</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1525.webp" alt="Produkt 2" />
-                    <p class="price">1299 kr</p>
-                    <p class="status">UDSOLGT</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
-                <article class="product">
-                    <h3>PUMA - Track Jacket</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1530.webp" alt="Produkt 3" />
-                    <p class="price">4299 kr</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
-                <article class="product">
-                    <h3>PUMA - Grey Solid Round Neck T-Shirt</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1531.webp" alt="Produkt 4" />
-                    <p class="price">799 kr</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
-                <article class="product">
-                    <h3>NIKE - Mean Team India Cricket Jersey</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1165.webp" alt="Produkt 5" />
-                    <p class="price">2495 kr</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
-                <article class="product">
-                    <h3>PUMA - Big Cat Backpack Black</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1526.webp" alt="Produkt 6" />
-                    <p class="price">1299 kr</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
-                <article class="product">
-                    <h3>PUMA - Black Fleece Jacket</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1528.webp" alt="Produkt 6" />
-                    <p class="price">3999 kr</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
-                <article class="product">
-                    <h3>PUMA - Tee</h3>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/1000/1529.webp" alt="Produkt 6" />
-                    <p class="price">1899 kr</p>
-                    <a href="product.html" class="btn">Køb nu</a>
-                </article>
+
             </div>
         </div>
+
     </main>
 </body>
 
